# routes/api.php
@@ -8,12 +8,3 @@ Route::post('/telegram/webhook', [TelegramWebhookController::class, 'handleWebho
 
 // Endpoint untuk testing manual via Swagger
 Route::post('/telegram/test-poll', [TelegramWebhookController::class, 'testPoll']);
-
-// Endpoint untuk debug Google Sheets connection
-Route::get('/telegram/debug-sheets', [TelegramWebhookController::class, 'debugSheets']);
-
-// Simple test connection
-Route::get('/telegram/simple-test', [TelegramWebhookController::class, 'simpleTest']);
-
-// Debug column mapping
-Route::get('/telegram/debug-columns', [TelegramWebhookController::class, 'debugColumnMapping']);
